assets/styles/tablet.css
header{
    height: 75px;
}

.header__download-button{
    width: var(--tablet-small-button-width);
    height: var(--tablet-small-button-height);
    font-size: var(--tablet-button-small);
}

.header__download-button a{
    width: var(--tablet-small-button-width);
    height: var(--tablet-small-button-height);
}

.header__contact-button{
    width: 50px;
    height: 20px;
    font-size: var(--tablet-button-small);
    margin-left: 25px;
    margin-right: 40px;
}

.header__contact-button a{
    width: var(--tablet-small-button-width);
    height: var(--tablet-small-button-height);
}

.header__link{
    display: inline-block;
    line-height: var(--tablet-small-button-height);
}

.introduction-container__greeting{
    font-size: var(--tablet-title);
}

.introduction-container__name{
    font-size: var(--tablet-title);
    margin: 0 0 15px 0
}

.introduction-container__description{
    font-size: var(--tablet-subtitle);
}

.self-introduction-section{
    min-height: 875px;
    max-height: 950px;
}

.section-title{
    font-size: var(--tablet-title);
}

.self-introduction-section__title{
    margin: 45px 0;
}

.self-introduction-section__description{
    font-size: var(--tablet-subtitle);
    margin-right: 45px;
    max-width: 700px;
    margin-bottom: 45px;
    line-height: 4.5rem;
}

.self-introduction-section__skills{
    height: 300px;
    max-width: 700px;
    margin-bottom: 45px;
}

.self-introduction-section__skills th{
    font-size: var(--tablet-text);
    margin-bottom: 50px;
}

.self-introduction-section__skills td{
    font-size: var(--tablet-text);
}

.self-introduction-section__button{
    width: var(--tablet-call-to-action-width);
    height: var(--tablet-call-to-action-height);
    font-size: var(--tablet-button);
}

.projects-section{
    min-height: 750px;
    max-height: 850px;
    background-color: var(--grey);
}

.projects-section__title{
    margin: 45px auto;
}

.projects-section__grid{
    grid-template-rows: 175px 175px 175px ;
    grid-gap: 25px 60px;
    margin: 0 15px;
}

.project{
    max-width: 400px;
}

.project__title{
    padding: 0 45px;
    font-size: var(--tablet-subtitle);
    margin-top: 30px;
    line-height: 3.5rem;
}

.project__description{
    padding: 0 45px;
    font-size: var(--tablet-text);
}

.contact-section{
    min-height: 800px;
    max-height: 900px;
}

.contact-section__title{
    margin: 45px auto;
}

.contact-section span{
    font-size: var(--tablet-title);
    margin: 45px auto;
}

.contact-section span:nth-child(3){
    width: var(--tablet-call-to-action-width);
    height: var(--tablet-call-to-action-height);
    font-size: var(--tablet-button);
    margin: 45px auto;
}

.contact-section span:nth-child(3) a{
    line-height: 60px;
}

.contact-section__logo-container{
    margin: 45px auto;
    height: 75px;
    width: 400px;
}

.logo{
    height: 75px;
    width: 75px;
}

.logo a{
    display: inline-block;
    height: 75px;
    width: 75px;
}

.linkedin{
    width: 85px;
}

